style: Fix media query overlap min/max width for phone screens

--- a/media/jamescuzella-screen.css
+++ b/media/jamescuzella-screen.css
@@ -515,7 +515,7 @@ strong {
 	}
 }
 
-@media only screen and (max-width: 599px) {
+@media only screen and (min-width: 376px) and (max-width: 599px) {
 	/* mobile browsers < 600px; (iPhone) */
 	body {
 		background-color: pink;
